--- a/notebooks/chap01.ipynb
+++ b/notebooks/chap01.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1331faa1",
    "metadata": {},
    "source": [
     "You can order print and ebook versions of *Think Bayes 2e* from\n",
@@ -15,19 +14,6 @@
    "metadata": {},
    "source": [
     "# Probability"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Think Bayes, Second Edition\n",
-    "\n",
-    "Copyright 2020 Allen B. Downey\n",
-    "\n",
-    "License: [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
    ]
   },
   {
@@ -1629,8 +1615,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "*Think Bayes*, Second Edition\n",
+    "\n",
+    "Copyright 2020 Allen B. Downey\n",
+    "\n",
+    "License: [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
+   ]
   }
  ],
  "metadata": {
@@ -1650,7 +1644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
