--- a/notebooks/chap06.ipynb
+++ b/notebooks/chap06.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1331faa1",
    "metadata": {},
    "source": [
     "You can order print and ebook versions of *Think Bayes 2e* from\n",
@@ -15,19 +14,6 @@
    "metadata": {},
    "source": [
     "# Odds and Addends"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Think Bayes, Second Edition\n",
-    "\n",
-    "Copyright 2020 Allen B. Downey\n",
-    "\n",
-    "License: [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
    ]
   },
   {
@@ -44,14 +30,13 @@
    },
    "outputs": [],
    "source": [
-    "# If we're running on Colab, install empiricaldist\n",
-    "# https://pypi.org/project/empiricaldist/\n",
+    "# install empiricaldist if necessary\n",
     "\n",
-    "import sys\n",
-    "IN_COLAB = 'google.colab' in sys.modules\n",
-    "\n",
-    "if IN_COLAB:\n",
-    "    !pip install empiricaldist"
+    "try:\n",
+    "    import empiricaldist\n",
+    "except ImportError:\n",
+    "    !pip install empiricaldist\n",
+    "    import empiricaldist"
    ]
   },
   {
@@ -1906,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 74,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:27.667020Z",
@@ -1922,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 75,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:29.237941Z",
@@ -1938,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 76,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:29.247538Z",
@@ -1954,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 77,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:29.253937Z",
@@ -1970,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 78,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:29.291044Z",
@@ -1986,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 79,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:29.407201Z",
@@ -2002,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 80,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:29.415545Z",
@@ -2017,11 +2002,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "*Think Bayes*, Second Edition\n",
+    "\n",
+    "Copyright 2020 Allen B. Downey\n",
+    "\n",
+    "License: [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
+   ]
   }
  ],
  "metadata": {
@@ -2041,7 +2032,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
