--- a/notebooks/chap17.ipynb
+++ b/notebooks/chap17.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1331faa1",
    "metadata": {},
    "source": [
     "You can order print and ebook versions of *Think Bayes 2e* from\n",
@@ -18,21 +17,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Think Bayes, Second Edition\n",
-    "\n",
-    "Copyright 2020 Allen B. Downey\n",
-    "\n",
-    "License: [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:43.792591Z",
@@ -44,19 +30,18 @@
    },
    "outputs": [],
    "source": [
-    "# If we're running on Colab, install empiricaldist\n",
-    "# https://pypi.org/project/empiricaldist/\n",
+    "# install empiricaldist if necessary\n",
     "\n",
-    "import sys\n",
-    "IN_COLAB = 'google.colab' in sys.modules\n",
-    "\n",
-    "if IN_COLAB:\n",
-    "    !pip install empiricaldist"
+    "try:\n",
+    "    import empiricaldist\n",
+    "except ImportError:\n",
+    "    !pip install empiricaldist\n",
+    "    import empiricaldist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:43.798000Z",
@@ -84,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:43.803533Z",
@@ -152,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.492216Z",
@@ -176,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.497478Z",
@@ -203,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.549351Z",
@@ -233,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.563856Z",
@@ -256,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.572178Z",
@@ -281,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.578061Z",
@@ -306,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.584664Z",
@@ -338,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.774042Z",
@@ -381,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.780474Z",
@@ -406,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.789914Z",
@@ -430,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.796359Z",
@@ -457,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.821740Z",
@@ -501,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.985446Z",
@@ -527,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:44.994657Z",
@@ -552,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.002030Z",
@@ -575,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.007222Z",
@@ -606,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.082559Z",
@@ -638,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.090543Z",
@@ -658,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.097282Z",
@@ -675,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.103775Z",
@@ -703,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.110768Z",
@@ -732,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.116443Z",
@@ -758,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.133803Z",
@@ -775,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.139897Z",
@@ -792,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.145315Z",
@@ -819,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.150860Z",
@@ -844,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.157932Z",
@@ -868,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.164698Z",
@@ -892,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.171835Z",
@@ -915,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.177823Z",
@@ -951,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:38:45.185541Z",
@@ -983,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:24.496186Z",
@@ -1009,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:24.511934Z",
@@ -1034,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:24.565248Z",
@@ -1079,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:24.912873Z",
@@ -1099,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:25.023742Z",
@@ -1127,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:25.063785Z",
@@ -1147,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:25.217691Z",
@@ -1173,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:25.224069Z",
@@ -1220,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:25.229663Z",
@@ -1249,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:25.270539Z",
@@ -1300,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:25.276199Z",
@@ -1326,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:25.282991Z",
@@ -1352,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:27.185227Z",
@@ -1382,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:27.192910Z",
@@ -1412,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:27.204066Z",
@@ -1439,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:27.240820Z",
@@ -1496,6 +1481,15 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://github.com/AllenDowney/ThinkBayes2/raw/master/data/Marathon_world_record_progression.html\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:39:27.418039Z",
@@ -1507,41 +1501,8 @@
    },
    "outputs": [],
    "source": [
-    "url = 'https://en.wikipedia.org/wiki/Marathon_world_record_progression#Men'\n",
     "tables = pd.read_html(url)\n",
     "len(tables)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "If that doesn't work, I have made a copy of this page available.  The following cell downloads and parses it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-04-16T19:39:27.828135Z",
-     "iopub.status.busy": "2021-04-16T19:39:27.827662Z",
-     "iopub.status.idle": "2021-04-16T19:39:27.829786Z",
-     "shell.execute_reply": "2021-04-16T19:39:27.829411Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#import os\n",
-    "\n",
-    "#datafile = 'Marathon_world_record_progression.html'\n",
-    "#download('https://github.com/AllenDowney/ThinkBayes2/raw/master/data/Marathon_world_record_progression.html')\n",
-    "\n",
-    "#tables = pd.read_html(datafile)\n",
-    "#len(tables)"
    ]
   },
   {
@@ -2972,11 +2933,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "*Think Bayes*, Second Edition\n",
+    "\n",
+    "Copyright 2020 Allen B. Downey\n",
+    "\n",
+    "License: [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
+   ]
   }
  ],
  "metadata": {
@@ -2996,7 +2963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
