--- a/notebooks/chap19_v3.ipynb
+++ b/notebooks/chap19_v3.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1331faa1",
    "metadata": {},
    "source": [
     "You can order print and ebook versions of *Think Bayes 2e* from\n",
@@ -2474,28 +2473,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "DahQIZ9i5373"
-   },
-   "source": [
-    "Note: This exercise is more difficult that some of the previous ones.  One of the challenges is that the data includes `k00`, which depends on `N`:\n",
-    "\n",
-    "```\n",
-    "k00 = N - num_seen\n",
-    "```\n",
-    "\n",
-    "So we have to construct the data as part of the model.\n",
-    "To do that, we can use `pm.math.stack`, which makes an array:\n",
-    "\n",
-    "```\n",
-    "data = pm.math.stack((k00, k01, k10, k11))\n",
-    "```\n",
-    "\n",
-    "Finally, you might find it helpful to use `pm.Multinomial`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "1EXGXu-l5373",
     "tags": []
    },
@@ -2558,13 +2535,37 @@
    },
    "outputs": [],
    "source": [
-    "num_seen = k01 + k10 + k11\n",
-    "num_seen"
+    "k_obs = [k01, k10, k11]\n",
+    "n_obs = np.sum(k_obs)\n",
+    "n_obs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "DahQIZ9i5373"
+   },
+   "source": [
+    "Note: This exercise is more difficult that some of the previous ones, and the solution that appeared in previous versions of this notebook doesn't work in recent versions of PyMC.\n",
+    "Here are some suggestions that might help.\n",
+    "\n",
+    "* Define priors for `p0`, `p1`, and `N`.\n",
+    "\n",
+    "* Compute the complementary probabilities, `q1` and `q2`, well as the probability of being seen, `p_seen`, and the probabilities of being seen by the first, second, or both testers, given that a bug is discovered.\n",
+    "\n",
+    "```\n",
+    "q0 = 1-p0\n",
+    "q1 = 1-p1\n",
+    "p_seen = 1 - q0*q1\n",
+    "ps = pm.math.stack([q0*p1, p0*q1, p0*p1]) / p_seen\n",
+    "```\n",
+    "\n",
+    "* Compute *two* likelihoods: the probability of finding `n_obs` bugs given `N` and `p_seen`, and the probability of `k_obs` given `n_obs` and `ps`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:41:41.964715Z",
@@ -2581,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:41:42.969634Z",
@@ -2598,7 +2599,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:41:49.210957Z",
@@ -2616,11 +2626,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "g3c6JE1I537M",
     "tags": []
    },
    "source": [
-    "Think Bayes, Second Edition\n",
+    "*Think Bayes*, Second Edition\n",
     "\n",
     "Copyright 2020 Allen B. Downey\n",
     "\n",
@@ -2648,7 +2657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
