--- a/notebooks/chap20.ipynb
+++ b/notebooks/chap20.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1331faa1",
    "metadata": {},
    "source": [
     "You can order print and ebook versions of *Think Bayes 2e* from\n",
@@ -15,19 +14,6 @@
    "metadata": {},
    "source": [
     "# Approximate Bayesian Computation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Think Bayes, Second Edition\n",
-    "\n",
-    "Copyright 2020 Allen B. Downey\n",
-    "\n",
-    "License: [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
    ]
   },
   {
@@ -44,13 +30,13 @@
    },
    "outputs": [],
    "source": [
-    "# If we're running on Colab, install libraries\n",
+    "# install empiricaldist if necessary\n",
     "\n",
-    "import sys\n",
-    "IN_COLAB = 'google.colab' in sys.modules\n",
-    "\n",
-    "if IN_COLAB:\n",
-    "    !pip install empiricaldist"
+    "try:\n",
+    "    import empiricaldist\n",
+    "except ImportError:\n",
+    "    !pip install empiricaldist\n",
+    "    import empiricaldist"
    ]
   },
   {
@@ -621,7 +607,7 @@
     "        if volume > vmax:\n",
     "            break\n",
     "\n",
-    "        rdt = pmf_rdt.choice()\n",
+    "        rdt = pmf_rdt.choice()[0]\n",
     "        age += interval \n",
     "        doublings = rdt * interval\n",
     "        volume *= 2**doublings\n",
@@ -1056,19 +1042,16 @@
    },
    "outputs": [],
    "source": [
-    "import pymc3 as pm\n",
+    "import pymc as pm\n",
     "billion = 1e9\n",
     "\n",
     "with pm.Model() as model:\n",
     "    yeast_conc = pm.Normal(\"yeast conc\", \n",
-    "                           mu=2 * billion, sd=0.4 * billion)\n",
+    "                           mu=2 * billion, sigma=0.4 * billion)\n",
     "\n",
-    "    shaker1_vol = pm.Normal(\"shaker1 vol\", \n",
-    "                               mu=9.0, sd=0.05)\n",
-    "    shaker2_vol = pm.Normal(\"shaker2 vol\", \n",
-    "                               mu=9.0, sd=0.05)\n",
-    "    shaker3_vol = pm.Normal(\"shaker3 vol\", \n",
-    "                               mu=9.0, sd=0.05)"
+    "    shaker1_vol = pm.Normal(\"shaker1 vol\", mu=9.0, sigma=0.05)\n",
+    "    shaker2_vol = pm.Normal(\"shaker2 vol\", mu=9.0, sigma=0.05)\n",
+    "    shaker3_vol = pm.Normal(\"shaker3 vol\", mu=9.0, sigma=0.05)"
    ]
   },
   {
@@ -1094,12 +1077,9 @@
    "outputs": [],
    "source": [
     "with model:\n",
-    "    yeast_slurry_vol = pm.Normal(\"yeast slurry vol\",\n",
-    "                                    mu=1.0, sd=0.01)\n",
-    "    shaker1_to_shaker2_vol = pm.Normal(\"shaker1 to shaker2\",\n",
-    "                                    mu=1.0, sd=0.01)\n",
-    "    shaker2_to_shaker3_vol = pm.Normal(\"shaker2 to shaker3\",\n",
-    "                                    mu=1.0, sd=0.01)"
+    "    yeast_slurry_vol = pm.Normal(\"yeast slurry vol\", mu=1.0, sigma=0.01)\n",
+    "    shaker1_to_shaker2_vol = pm.Normal(\"shaker1 to shaker2\", mu=1.0, sigma=0.01)\n",
+    "    shaker2_to_shaker3_vol = pm.Normal(\"shaker2 to shaker3\", mu=1.0, sigma=0.01)"
    ]
   },
   {
@@ -1157,8 +1137,7 @@
    "outputs": [],
    "source": [
     "with model:\n",
-    "    chamber_vol = pm.Gamma(\"chamber_vol\", \n",
-    "                           mu=0.0001, sd=0.0001 / 20)"
+    "    chamber_vol = pm.Gamma(\"chamber_vol\", mu=0.0001, sigma=0.0001 / 20)"
    ]
   },
   {
@@ -1271,7 +1250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The posterior mean is about 2.3 billion cells per mL, with a 90% credible interval from 1.8 and 2.7.\n",
+    "The posterior mean is about 2.2 billion cells per mL, with a 90% credible interval from 1.8 and 2.7.\n",
     "\n",
     "So far we've been following in Davidson-Pilon's footsteps.\n",
     "And for this problem, the solution using MCMC is sufficient.\n",
@@ -1303,7 +1282,7 @@
    "outputs": [],
    "source": [
     "with model:\n",
-    "    prior_sample = pm.sample_prior_predictive(10000)"
+    "    prior_sample = pm.sample_prior_predictive(10000, **options)"
    ]
   },
   {
@@ -2093,11 +2072,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "*Think Bayes*, Second Edition\n",
+    "\n",
+    "Copyright 2020 Allen B. Downey\n",
+    "\n",
+    "License: [Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
+   ]
   }
  ],
  "metadata": {
@@ -2117,7 +2102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
